Revert "Fix bot button styles light/dark modes (#1079)"
This reverts commit aca2ecf3c226a16f36b3b6cfc407a6a0463aa0d8.

--- a/src/components/ChatBot/styles.css
+++ b/src/components/ChatBot/styles.css
@@ -1,90 +1,90 @@
 .lb-bg-background {
-	background-color: #f9fafb;
+  background-color: #F9FAFB;
 }
 
 .lb-bg-muted {
-	background-color: #f4f4f5;
+  background-color: #f4f4f5;
 }
 
 .lb-text-primary-foreground {
-	color: #0f172a;
-	background-color: #ffffff;
-	border-width: 1;
-	border-color: rgb(219 226 240);
+  color: #0F172A;
+  background-color: #ffffff;
+  border-width: 1;
+  border-color: rgb(219 226 240);
 }
 
 .light button.hover\:lb-bg-foreground:hover {
-	background-color: #f9fafb !important;
-	color: #0f172a !important;
+  background-color: #F9FAFB;
+  color: #0F172A !important
 }
 
 button.lb-text-primary-foreground {
-	background-color: #ffffff !important;
+  background-color: #ffffff;
 }
 
 .light .lb-border-muted-foreground\/40 {
-	border-color: rgb(219 226 240) !important;
+  border-color: rgb(219 226 240) !important;
 }
 
 .light .lb-text-primary-foreground:hover {
-	background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .lb-text-inherit {
-	color: #334155;
+  color: #334155;
 }
 
 .lb-line-clamp-2 {
-	color: #334155 !important;
+  color: #334155 !important;
 }
 .dark .lb-border-border {
-	border-color: rgb(38 43 56);
+  border-color: rgb(38 43 56);
 }
 
 .dark .lb-text-primary-foreground {
-	color: #f9fafb;
-	background-color: rgb(29 33 47);
-	border-width: 1;
-	border-color: rgb(38 43 56);
+  color: #F9FAFB;
+  background-color: rgb(29 33 47);
+  border-width: 1;
+  border-color: rgb(38 43 56);
 }
 
 .dark .lb-border-muted-foreground {
-	border-color: rgb(38 43 56);
+  border-color: rgb(38 43 56);
 }
 
 .dark .lb-bg-background {
-	background-color: #14171f;
+  background-color: #14171F;
 }
 
 .dark .lb-bg-muted {
-	background-color: #171b26;
+  background-color: #171B26;
 }
 
 .dark .lb-bg-border {
-	border-color: rgb(38 43 56);
-	background-color: rgb(38 43 56);
+  border-color: rgb(38 43 56);
+  background-color: rgb(38 43 56);
 }
 
 .dark .sm\:lb-border-border {
-	border-color: rgb(38 43 56);
+  border-color: rgb(38 43 56);
 }
 
 .dark .lb-text-inherit {
-	color: #94a3b8;
+  color: #94A3B8;
 }
 
 .dark .lb-line-clamp-2 {
-	color: #94a3b8 !important;
+  color: #94A3B8 !important;
 }
 
 .dark button.hover\:lb-bg-foreground:hover {
-	color: #f9fafb !important;
+  color: #F9FAFB !important
 }
 
 .dark .hover\:lb-bg-secondary\/60:hover {
-	background-color: #171b26 !important;
+  background-color: #171B26;
 }
 
 .dark .hover\:lb-bg-accent:hover {
-	background-color: #171b26;
+  background-color: #171B26;
 }
